--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,11 @@
             <version>3.1.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+        <groupId>com.github.javafaker</groupId>
+        <artifactId>javafaker</artifactId>
+        <version>0.15</version>
+    </dependency>
 
 
     </dependencies>
